--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,12 @@
     <param-value>#{themeBeam.applicationTheme}</param-value>
 	</context-param>
  -->
+
+	<context-param>
+	<param-name>primefaces.THEME</param-name>
+	<param-value>cupertino</param-value>
+	</context-param>
+ 
  <!-- Registrando a tag lib que criamos -->
   <context-param>
      <param-name>facelets.LIBRARIES</param-name>
